finished backend, working flutter client